@@ -1,3 +1,8 @@
+2010-06-30  Joel Brobecker  <brobecker@adacore.com>
+
+	* python/python-internal.h (_XOPEN_SOURCE): Undefine before
+	including Python.h.
+
 2010-06-29  Doug Evans  <dje@google.com>
 
 	PR gdb/11702
